# weaver

./: LICENSE  README.md  pyproject.toml  weaver.md
docs/: structure.md
examples/: basic_usage.ipynb  basic_usage.py  multiple_instances.py  openrouter_examples.py  provider_comparison.py  quick_test.py  test_openrouter.py  test_structure.py
weaver/: __init__.py  decorators.py  exceptions.py  models.py
weaver/core/: __init__.py  data_generator.py  dependency_resolver.py  prompt_builder.py  schema_converter.py  validator.py  weaver.py
weaver/providers/: __init__.py  base.py  openai_provider.py  openrouter_provider.py  registry.py
