[project]
name = "weaver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "CaioWing", email = "caio@airis-tech.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "pydantic[email]>=2.0.0",
    "typing-extensions>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["weaver"]

[dependency-groups]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "ipykernel>=6.30.1",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]
